# TeamJAKK

./: .gitignore  CMakeCache.txt  CMakeLists(failed).txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  azure-piplines.yml  cmake_install.cmake  compile_commands.json  makefile  swordthrower
OpenGL Libraries/Include/glad/: glad.h
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindIrrKlang.cmake
common/textures/: textures.txt
include/: Collision.h  Control.h  Controller.h  DungeonMap.h  DungeonTile.h  FileLoader.h  GameMath.h  GameRunner.h  Graphics.h  Hud.h  LinkedList.h  MainMenu.h  ResourceManager.h  System.h  TextBox.h  Texture.h  WindowManager.h  behaviors.h  enemy.h  enemy_manager.h  entity.h  player.h  projectile.h  resource_manager.h  sprite_renderer.h  sword.h
opengllib/: Note.txt  ReadMe.txt  glad.c
opengllib/Include/glm/: CMakeSettings.json
opengllib/Lib/: SOIL.lib  glfw3(old).lib  glfw3.lib
shaders/: BoxShader.frag  BoxShader.vert  FillShader.frag  FillShader.vert  HitBoxShader.frag  HitBoxShader.vert  TextShader.frag  TextShader.vert
src/: Collision.cpp  Control.cpp  Controller.cpp  DungeonMap.cpp  DungeonTile.cpp  FileLoader.cpp  GameMath.cpp  GameRunner.cpp  Graphics.cpp  Hud.cpp  LinkedList.cpp  Main.cpp  MainMenu.cpp  Shader.cpp  System.cpp  TextBox.cpp  Texture.cpp  WindowManager.cpp  behaviors.cpp  enemy.cpp  enemy_manager.cpp  entity.cpp  player.cpp  projectile.cpp  resource_manager.cpp  sprite_renderer.cpp  sword.cpp
src/helpers/: RootDir.h.in
test/: TestBase.cpp  TestEnemy.cpp  TestGameMath.cpp
